Auth demo ui changed to latest spec

--- a/authentication-demo-ui/src/main/resources/application.properties
+++ b/authentication-demo-ui/src/main/resources/application.properties
@@ -25,7 +25,70 @@ mosip.kernel.crypto.hash-iteration=100000
 #Sign algo name
 mosip.kernel.crypto.sign-algorithm-name=SHA512withRSA
 
-#ida.otp.url=https://ext-int.mosip.io/idauthentication/v1/otp/1873299273/735899345
-#ida.auth.url=http://52.172.53.239:8090/idauthentication/v1/auth/1873299273/735899345
-#ida.publickey.url=https://ext-int.mosip.io/v1/keymanager/publickey/IDA
-#ida.authmanager.url=https://ext-int.mosip.io/v1/authmanager/authenticate/clientidsecretkey
+
+clientId=mosip-regproc-client
+secretKey=abc123
+appId=regproc
+ida.reference.id=PARTNER
+mispLicenseKey= r9YUOi2BvC9QVdZP5snsCeonXqdEZ9rQ0TroekqHMhX3c8mPfr
+partnerId=431447
+partnerApiKey=57722533
+mosip.base.url = https://sandboxv2.southindia.cloudapp.azure.com
+ida.otp.url = ${mosip.base.url}/idauthentication/v1/otp/${mispLicenseKey}/${partnerId}/${partnerApiKey}
+ida.auth.url=${mosip.base.url}/idauthentication/v1/auth/${mispLicenseKey}/${partnerId}/${partnerApiKey}
+ida.publickey.url = ${mosip.base.url}/idauthentication/v1/internal/publickey
+ida.authmanager.url=${mosip.base.url}/v1/authmanager/authenticate/clientidsecretkey
+
+ida.captureRequest.uri=http://127.0.0.1:4501/capture
+
+
+ida.request.captureFinger.domainUri=
+ida.request.captureFinger.requestedScore=60
+ida.request.captureFinger.timeout=1000
+ida.request.captureFinger.type=FIR
+ida.request.captureFinger.deviceId=ertyuikj
+ida.request.captureFinger.deviceSubId=dfghjkjh
+ida.request.captureFinger.name=name1
+ida.request.captureFinger.value=value1
+ida.request.captureFinger.bioSubType =UNKNOWN
+
+ida.request.captureIris.domainUri=
+ida.request.captureIris.requestedScore=60
+ida.request.captureIris.timeout=1000
+ida.request.captureIris.type=IIR
+ida.request.captureIris.deviceId=ertyuikj
+ida.request.captureIris.name=name1
+ida.request.captureIris.value=value1
+ida.request.captureIris.bioSubType =UNKNOWN
+
+ida.request.captureFace.domainUri=
+ida.request.captureFace.requestedScore=60
+ida.request.captureFace.timeout=1000
+ida.request.captureFace.type=IIR
+ida.request.captureFace.deviceId=ertyuikj
+ida.request.captureFace.name=name1
+ida.request.captureFace.value=value1
+ida.request.captureFace.bioSubType =UNKNOWN
+
+ida.request.captureRequest.template={\
+	"env": "Staging",\
+	"purpose": "Auth",\
+	"specVersion": "0.9.2",\
+	"timeout": "$timeout",\
+	"captureTime": "0001-01-01T00:00:00",\
+	"domainUri": "$domainUri",\
+	"transactionId": "1234567890",\
+	"bio": [{\
+		"type": "$type",\
+		"count": "$count",\
+		"bioSubType": [$bioSubType],\
+		"requestedScore": "$requestedScore",\
+		"deviceId": "$deviceId",\
+		"deviceSubId": "$deviceSubId",\
+		"previousHash": "$previousHash"\
+	}],\
+	"customOpts": [{\
+		"name": "$name",\
+		"value": "$value"\
+	}]\
+}
