Capture time updated

--- a/authentication-demo-ui/src/main/resources/application-local.properties
+++ b/authentication-demo-ui/src/main/resources/application-local.properties
@@ -42,29 +42,29 @@ ida.authmanager.url=${mosip.base.url}/v1/authmanager/authenticate/clientidsecret
 ida.captureRequest.uri=http://127.0.0.1:4501/capture
 
 
-ida.request.captureFinger.domainUri=
+ida.request.captureFinger.domainUri=https://sandboxv2.southindia.cloudapp.azure.com
 ida.request.captureFinger.requestedScore=60
-ida.request.captureFinger.timeout=1000
-ida.request.captureFinger.type=FIR
+ida.request.captureFinger.timeout=300000
+ida.request.captureFinger.type=Finger
 ida.request.captureFinger.deviceId=ertyuikj
 ida.request.captureFinger.deviceSubId=dfghjkjh
 ida.request.captureFinger.name=name1
 ida.request.captureFinger.value=value1
 ida.request.captureFinger.bioSubType =UNKNOWN
 
-ida.request.captureIris.domainUri=
+ida.request.captureIris.domainUri=https://sandboxv2.southindia.cloudapp.azure.com
 ida.request.captureIris.requestedScore=60
-ida.request.captureIris.timeout=1000
-ida.request.captureIris.type=IIR
+ida.request.captureIris.timeout=30000
+ida.request.captureIris.type=Iris
 ida.request.captureIris.deviceId=ertyuikj
 ida.request.captureIris.name=name1
 ida.request.captureIris.value=value1
 ida.request.captureIris.bioSubType =UNKNOWN
 
-ida.request.captureFace.domainUri=
+ida.request.captureFace.domainUri=https://sandboxv2.southindia.cloudapp.azure.com
 ida.request.captureFace.requestedScore=60
-ida.request.captureFace.timeout=1000
-ida.request.captureFace.type=IIR
+ida.request.captureFace.timeout=30000
+ida.request.captureFace.type=Face
 ida.request.captureFace.deviceId=ertyuikj
 ida.request.captureFace.name=name1
 ida.request.captureFace.value=value1
@@ -73,9 +73,9 @@ ida.request.captureFace.bioSubType =UNKNOWN
 ida.request.captureRequest.template={\
 	"env": "Staging",\
 	"purpose": "Auth",\
-	"specVersion": "0.9.2",\
+	"specVersion": "0.9.5",\
 	"timeout": "$timeout",\
-	"captureTime": "0001-01-01T00:00:00",\
+	"captureTime": "$captureTime",\
 	"domainUri": "$domainUri",\
 	"transactionId": "1234567890",\
 	"bio": [{\
