--- a/authentication-demo-ui/pom.xml
+++ b/authentication-demo-ui/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>io.mosip.authentication</groupId>
 		<artifactId>authentication-parent</artifactId>
-		<version>0.10.1</version>
+		<version>1.0.9-SNAPSHOT</version>
 	</parent>
 	<artifactId>authentication-demo-ui</artifactId>
 	<name>authentication-demo-ui</name>
-
+	<version>1.0.9</version>
 	<properties>
 		<sonar.skip>true</sonar.skip>
 	</properties>
