--- a/authentication-demo-ui/src/main/resources/application.properties
+++ b/authentication-demo-ui/src/main/resources/application.properties
@@ -30,10 +30,10 @@ clientId=mosip-regproc-client
 secretKey=abc123
 appId=regproc
 ida.reference.id=PARTNER
-mispLicenseKey= r9YUOi2BvC9QVdZP5snsCeonXqdEZ9rQ0TroekqHMhX3c8mPfr
-partnerId=431447
-partnerApiKey=57722533
-mosip.base.url = https://sandboxv2.southindia.cloudapp.azure.com
+mispLicenseKey= UmjbDSra8pzOGd5rVtKekTb9D6VdvOQg4Kmw5TzBdw18mbzzME
+partnerId=748757
+partnerApiKey=9418294
+mosip.base.url = https://dev-test.southindia.cloudapp.azure.com
 ida.otp.url = ${mosip.base.url}/idauthentication/v1/otp/${mispLicenseKey}/${partnerId}/${partnerApiKey}
 ida.auth.url=${mosip.base.url}/idauthentication/v1/auth/${mispLicenseKey}/${partnerId}/${partnerApiKey}
 ida.publickey.url = ${mosip.base.url}/idauthentication/v1/internal/publickey
@@ -42,30 +42,29 @@ ida.authmanager.url=${mosip.base.url}/v1/authmanager/authenticate/clientidsecret
 ida.captureRequest.uri=http://127.0.0.1:4501/capture
 
 
-ida.request.captureFinger.domainUri=https://sandboxv2.southindia.cloudapp.azure.com
+ida.request.captureFinger.domainUri=${mosip.base.url}
 ida.request.captureFinger.requestedScore=60
 ida.request.captureFinger.timeout=300000
 ida.request.captureFinger.type=Finger
-ida.request.captureFinger.deviceId=ertyuikj
-ida.request.captureFinger.deviceSubId=dfghjkjh
+ida.request.captureFinger.deviceId=1
 ida.request.captureFinger.name=name1
 ida.request.captureFinger.value=value1
 ida.request.captureFinger.bioSubType =UNKNOWN
 
-ida.request.captureIris.domainUri=https://sandboxv2.southindia.cloudapp.azure.com
+ida.request.captureIris.domainUri=${mosip.base.url}
 ida.request.captureIris.requestedScore=60
 ida.request.captureIris.timeout=30000
 ida.request.captureIris.type=Iris
-ida.request.captureIris.deviceId=ertyuikj
+ida.request.captureIris.deviceId=2
 ida.request.captureIris.name=name1
 ida.request.captureIris.value=value1
 ida.request.captureIris.bioSubType =UNKNOWN
 
-ida.request.captureFace.domainUri=https://sandboxv2.southindia.cloudapp.azure.com
+ida.request.captureFace.domainUri=${mosip.base.url}
 ida.request.captureFace.requestedScore=60
 ida.request.captureFace.timeout=30000
 ida.request.captureFace.type=Face
-ida.request.captureFace.deviceId=ertyuikj
+ida.request.captureFace.deviceId=3
 ida.request.captureFace.name=name1
 ida.request.captureFace.value=value1
 ida.request.captureFace.bioSubType =UNKNOWN
