--- a/authentication-demo-ui/src/main/resources/bootstrap.properties
+++ b/authentication-demo-ui/src/main/resources/bootstrap.properties
@@ -6,15 +6,15 @@ spring.application.name=authentication-demo-ui
 #Active Profile - will relate to development properties file in the server.
 #If this property is absent then default profile will be activated which is
 #the property file without any environment name at the end. 
-spring.profiles.active=dev
+spring.profiles.active=extint
 
 
 # defining current branch in which we are working as label
-spring.cloud.config.label=master
+spring.cloud.config.label=1.0.9
  
 
 # url where spring cloud config server is running 
-spring.cloud.config.uri=localhost
+#spring.cloud.config.uri=http://104.211.212.28:51000
 
  
 #management.security.enabled=false
