--- a/authentication-demo-ui/src/main/resources/application-local.properties
+++ b/authentication-demo-ui/src/main/resources/application-local.properties
@@ -41,7 +41,7 @@ partnerApiKey=9418294
 mosip.base.url = https://dev-test.southindia.cloudapp.azure.com
 ida.otp.url = ${mosip.base.url}/idauthentication/v1/otp/${mispLicenseKey}/${partnerId}/${partnerApiKey}
 ida.auth.url=${mosip.base.url}/idauthentication/v1/auth/${mispLicenseKey}/${partnerId}/${partnerApiKey}
-ida.publickey.url = ${mosip.base.url}/idauthentication/v1/internal/publickey
+ida.certificate.url = ${mosip.base.url}/idauthentication/v1/internal/getCertificate
 ida.authmanager.url=${mosip.base.url}/v1/authmanager/authenticate/clientidsecretkey
 
 ida.captureRequest.uri=http://127.0.0.1:4501/capture
