Added signature and thumbprint support

--- a/authentication-demo-ui/src/main/resources/application.properties
+++ b/authentication-demo-ui/src/main/resources/application.properties
@@ -43,6 +43,7 @@ ida.otp.url = ${mosip.base.url}/idauthentication/v1/otp/${mispLicenseKey}/${part
 ida.auth.url=${mosip.base.url}/idauthentication/v1/auth/${mispLicenseKey}/${partnerId}/${partnerApiKey}
 ida.certificate.url = ${mosip.base.url}/idauthentication/v1/internal/getCertificate
 ida.authmanager.url=${mosip.base.url}/v1/authmanager/authenticate/clientidsecretkey
+ida.internal.jwtSign.url=${mosip.base.url}/idauthentication/v1/internal/jwtSign
 
 ida.captureRequest.uri=http://127.0.0.1:4501/capture
 
