--- a/authentication-demo-ui/pom.xml
+++ b/authentication-demo-ui/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<artifactId>authentication-demo-ui</artifactId>
 	<name>authentication-demo-ui</name>
-	<version>1.1.4-SNAPSHOT</version>
+	<version>1.1.4-rc1</version>
 	<properties>
 		<sonar.skip>true</sonar.skip>
 		<openjfx.version>11.0.2</openjfx.version>
@@ -48,17 +48,17 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-keygenerator-bouncycastle</artifactId>
-			<version>1.1.4-SNAPSHOT</version>
+			<version>1.1.4-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-crypto-jce</artifactId>
-			<version>1.1.4-SNAPSHOT</version>
+			<version>1.1.4-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
-			<version>1.1.4-SNAPSHOT</version>
+			<version>1.1.4-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.ws.rs</groupId>
