--- a/authentication-demo-ui/pom.xml
+++ b/authentication-demo-ui/pom.xml
@@ -12,7 +12,7 @@
 	<name>authentication-demo-ui</name>
 	<version>1.2.0-SNAPSHOT</version>
 	<properties>
-		<sonar.skip>true</sonar.skip>
+<!--		<sonar.skip>true</sonar.skip>-->
 		<openjfx.version>11.0.2</openjfx.version>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
