Mosip 15973 demo UI update for partner signing update (#616)
* Added support for loading partner keys and certs for request signing

* Updated readme

* corrected typo

* Added javadoc comments

* Updated readme

* Updated readme

* Updated readme

* Updated readme

* Added jdoc

--- a/authentication-demo-ui/src/main/resources/application.properties
+++ b/authentication-demo-ui/src/main/resources/application.properties
@@ -47,6 +47,8 @@ ida.internal.jwtSign.url=${mosip.base.url}/idauthentication/v1/internal/jwtSign
 
 ida.captureRequest.uri=http://127.0.0.1:4501/capture
 
+p12.password=qwerty@123
+
 
 ida.request.captureFinger.domainUri=${mosip.base.url}
 ida.request.captureFinger.requestedScore=60
