--- a/authentication-demo-ui/pom.xml
+++ b/authentication-demo-ui/pom.xml
@@ -53,12 +53,12 @@
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-core</artifactId>
-			<version>1.2.0.1-SNAPSHOT</version>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>io.mosip.kernel</groupId>
 			<artifactId>kernel-keymanager-service</artifactId>
-			<version>1.2.0.1-SNAPSHOT</version>	
+			<version>1.2.0</version>	
 			<classifier>lib</classifier>
 		</dependency>
 		<dependency>
